# iron

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  Todo.md  compile_commands.json  imgui.ini
Debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Iron.sln  Iron.vcxproj  Iron.vcxproj.filters  IronConfig.hpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Debug/Iron.dir/Debug/: iron.dll.recipe
Debug/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Debug/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Sandbox/src/Overlay/: DebugUI.cpp  DebugUI.hpp
res/model/backpack/: backpack.mtl
res/shaders/: default.glsl  default_2.glsl  lighting.shader  location.glsl
res/shaders/default/: default.frag  default.vert
scripts/: build.py
src/: Iron.h
src/Iron/: Application.cpp  Application.h  Core.h  Entry.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  IronConfig.h.in  Layer.h  LayerStack.cpp  Log.cpp  Log.h  Logger.cpp  PlatformDetect.h  Renderer.cpp  Renderer.h  Shader.cpp  Shaders.h  Texture2D.cpp  Texture2D.h  VertexBuffer.cpp  Viewport.cpp  Viewport.h  Window.h  pch.h
src/Iron/Event/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/Iron/Renderer/: IndexBuffer.cpp  Shader.cpp  Shaders.h  Texture2D.h  VertexArray.h
src/Iron/include/: Application.h  Application.hpp  Core.h  Core.hpp  Entry.h  Entry.hpp  ImGuiLayer.h  ImGuiLayer.hpp  Input.h  Input.hpp  Internal.hpp  Iron.h  Iron.hpp  IronEngine.hpp  Layer.h  Layer.hpp  LayerStack.h  LayerStack.hpp  Log.h  Log.hpp  PlatformDetect.h  Time.hpp  Viewport.h  Viewport.hpp  Window.h  Window.hpp  pch.hpp
src/Iron/include/Event/: Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp  WindowEvent.h  WindowEvent.hpp
src/Iron/include/Platform/OpenGL/: OpenglApi.hpp
src/Iron/include/Platform/Windows/: WindowsWindow.h  WindowsWindow.hpp
src/Iron/include/Renderer/: Camera.hpp  GameObject.hpp  IndexBuffer.h  IndexBuffer.hpp  Light.hpp  RenderApi.hpp  RenderCommand.h  RenderCommand.hpp  Renderer.h  Renderer.hpp  Shader.hpp  Shaders.h  Shaders.hpp  Texture2D.h  Texture2D.hpp  VertexArray.h  VertexArray.hpp  VertexBuffer.h  VertexBuffer.hpp
src/Iron/include/Renderer/Components/: Material.hpp  Mesh.hpp  Transform.hpp
src/Iron/platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
src/Iron/src/: Application.cpp  ImGuiLayer.cpp  Input.cpp  Internal.cpp  IronEngine.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Time.cpp  Viewport.cpp
src/Iron/src/ImGui/: ImGui_GLFW.cpp  ImGui_OpenGL3.cpp
src/Iron/src/Platform/OpenGL/: ImGui_GLFW.cpp  ImGui_OpenGL3.cpp  OpenglApi.cpp
src/Iron/src/Platform/Windows/: WindowsWindow.cpp
src/Iron/src/Renderer/: Camera.cpp  GameObject.cpp  IndexBuffer.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Iron/src/Renderer/Components/: Material.cpp  Mesh.cpp  Transform.cpp
test/: CMakeLists.txt
test/src/: Sandbox.cpp
